# agentifa-555nake

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
.cargo/: config.toml
agentifa-555nake-client/: Cargo.toml
agentifa-555nake-client/html/: index.html
agentifa-555nake-client/src/: game.rs  gameover.rs  lib.rs  load.rs  main.rs  menu.rs  register.rs  vkeyboard.rs
agentifa-555nake-protocol/: Cargo.toml
agentifa-555nake-protocol/src/: protocol.rs
agentifa-555nake-protocol/src/protocol/: assign_msg.rs  auth.rs  dir_cmd.rs  food.rs  head.rs  highscore.rs  highscore_rank.rs  name.rs  position.rs  quit_cmd.rs  score.rs  segment.rs  start_cmd.rs  vincible.rs
agentifa-555nake-server/: Cargo.toml
agentifa-555nake-server/src/: highscore.rs  main.rs
