[package]
name = "agentifa-555nake-protocol"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = { version = "0.6.1", default-features = false }
naia-derive = { git = "https://github.com/FF-AntiK/naia-1", branch = "testing" }
naia-shared = { git = "https://github.com/FF-AntiK/naia-1", branch = "testing" }
