[package]
name = "agentifa-555nake-protocol"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = { version = "0.7.0", default-features = false }
naia-shared = { git = "https://github.com/FF-AntiK/naia-1", branch = "ipv6_support" }
