[package]
name = "agentifa-555nake-server"
version = "0.2.5"
edition = "2021"

[features]
use-udp = ["naia-bevy-server/use-udp"]
use-webrtc = ["naia-bevy-server/use-webrtc"]

[dependencies]
agentifa-555nake-protocol = { path = "../agentifa-555nake-protocol" }
bevy = { version = "0.7.0", default-features = false }
frank = "0.1.3"
naia-bevy-server = { git = "https://github.com/FF-AntiK/naia-1", branch = "ipv6_support" }
naia-shared = { git = "https://github.com/FF-AntiK/naia-1", branch = "ipv6_support" }
obfstr = "0.3.0"
serde_json = "1.0.79"
