[package]
name = "agentifa-555nake-server"
version = "0.3.2"
edition = "2021"

[dependencies]
agentifa-555nake-protocol = { path = "../agentifa-555nake-protocol" }
bevy = { version = "0.8.1", default-features = false }
frank = "0.1.3"
naia-bevy-server = { git = "https://github.com/FF-AntiK/naia.git", branch = "ipv6" }
obfstr = "0.4.1"
serde_json = "1.0.85"
